@@ -119,7 +119,9 @@ Version number
                               Announce opens in new window even if it is internal link.
                               Other documentations in class Link_Function
                               
-   16 Feb, 2016   'User can select the link's target in Reading option'
-                           Need testing. 
+   16 Feb, 2019   'User can select the link's target in Reading option'
+                           Need testing.
+   
+   19 Feb, 2019   'no-javascript message moved to template'
                               
                               
